# device-gateway

./: .gitignore  README.md
Control Project/: DOCKER_RUN.md  Dockerfile  docker-compose.yml  pom.xml
Control Project/src/main/java/com/example/controlproject/bootstrap/: ControlProjectApplication.java  NettyBridgeServer.java
Control Project/src/main/java/com/example/controlproject/codec/: StxEtxFrameDecoder.java
Control Project/src/main/java/com/example/controlproject/config/: AppConfig.java  AppProperties.java
Control Project/src/main/resources/: application.properties
Exporter project/: .dockerignore  DOCKER.md  Dockerfile  pom.xml
Exporter project/src/main/java/com/example/forwarder/: AppConfig.java  AppProperties.java  ExporterWorker.java  MetricsService.java  TcpForwarderApplication.java  TcpServerHandler.java  TcpServerLifecycle.java
Exporter project/src/main/resources/: application.yml
ops-agent-service/: .env.example  README.md  pyproject.toml  三分钟面试讲稿.md  架构与流程图.md  模拟面试问答.md  简历项目描述.md  项目说明与面试指南.md
ops-agent-service/app/: __init__.py  config.py  dashboard.py  llm.py  main.py
ops-agent-service/app/clients/: __init__.py  gateway_ops.py  loki.py  prometheus.py
ops-agent-service/app/graph/: state.py  workflow.py
ops-agent-service/app/models/: __init__.py  api.py  domain.py
ops-agent-service/app/services/: __init__.py  anomaly.py  persistence.py
ops-agent-service/app/tools/: __init__.py  observability.py
ops-agent-service/tests/: test_anomaly.py  test_dashboard.py  test_time_range.py
(+8 files in other folders)
